test/files/neg/prefix-unary-nilary-deprecation.check
prefix-unary-nilary-deprecation.scala:4: warning: empty-paren (nilary) prefix unary operator is deprecated: instead, remove () to declare as `def unary_~ : Foo`
  def unary_~() : Foo = this
      ^
prefix-unary-nilary-deprecation.scala:10: warning: Auto-application to `()` is deprecated. Supply the empty argument list `()` explicitly to invoke method unary_~,
or remove the empty argument list from its definition (Java-defined methods are exempt).
In Scala 3, an unapplied method like this will be eta-expanded into a function.
  val f2 = ~f
           ^
error: No warnings can be incurred under -Werror.
2 warnings
1 error
